sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value iMin
    iMin=j
    ^AlgInsertionSort:10: error: not found: value a
      if(a[i] < a[iMin]){
         ^AlgInsertionSort:10: error: not found: type i
      if(a[i] < a[iMin]){
           ^AlgInsertionSort:10: error: not found: value a
      if(a[i] < a[iMin]){
                ^AlgInsertionSort:10: error: not found: type iMin
      if(a[i] < a[iMin]){
                  ^AlgInsertionSort:11: error: not found: value iMin
        iMin=i
        ^AlgInsertionSort:14: error: not found: value iMin
    if (iMin!=j){
        ^AlgInsertionSort:15: error: not found: value a
      echange(a[j],a[iMin])
              ^AlgInsertionSort:15: error: not found: type j
      echange(a[j],a[iMin])
                ^AlgInsertionSort:15: error: not found: value a
      echange(a[j],a[iMin])
                   ^AlgInsertionSort:15: error: not found: type iMin
      echange(a[j],a[iMin])
                     ^