sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int=getNombreValeurs()
  var i:Int=0
  var j:Int=0
  var v:Int=0
  for (i <- 1 to lgr-1){
    iMin=j
    for (i <- j+1 to lgr){
      if(a[i] < a[iMin]){
        iMin=i
      }
    }
    if (iMin!=j){
      echange(a[j],a[iMin])
    }
  }
}
      
    //
   // while(v<i-lgr+1)
     // if(i-1>v){
      //  echange(i-1,i)
       